LAB5/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> expr ;
Rule 7     instruction -> block_stmt
Rule 8     instruction -> print_stmt
Rule 9     instruction -> flow_stmt
Rule 10    instruction -> for_stmt
Rule 11    instruction -> while_stmt
Rule 12    instruction -> if_stmt
Rule 13    instruction -> assignment
Rule 14    flow_stmt -> RETURN expr ;
Rule 15    flow_stmt -> RETURN ;
Rule 16    flow_stmt -> CONTINUE ;
Rule 17    flow_stmt -> BREAK ;
Rule 18    if_stmt -> IF ( expr ) instruction  [precedence=nonassoc, level=1]
Rule 19    if_stmt -> IF ( expr ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 20    while_stmt -> WHILE ( expr ) instruction
Rule 21    for_interval -> expr
Rule 22    for_interval -> INTNUM
Rule 23    for_interval -> ID
Rule 24    for_stmt -> FOR ID = for_interval : for_interval instruction
Rule 25    block_stmt -> { instructions }
Rule 26    print_stmt -> PRINT expr_list ;
Rule 27    assignment -> lvalue DIVASSIGN expr ;
Rule 28    assignment -> lvalue MULASSIGN expr ;
Rule 29    assignment -> lvalue SUBASSIGN expr ;
Rule 30    assignment -> lvalue ADDASSIGN expr ;
Rule 31    assignment -> lvalue = expr ;
Rule 32    lvalue -> ID [ expr_list ]
Rule 33    lvalue -> ID
Rule 34    expr -> matrix
Rule 35    expr -> SUB expr  [precedence=right, level=8]
Rule 36    expr -> ONES ( expr_list )
Rule 37    expr -> ZEROS ( expr_list )
Rule 38    expr -> EYE ( expr_list )
Rule 39    expr -> expr '  [precedence=left, level=9]
Rule 40    expr -> STRING
Rule 41    expr -> FLOAT
Rule 42    expr -> INTNUM
Rule 43    expr -> ID
Rule 44    expr -> ID [ expr_list ]
Rule 45    expr -> ( expr )
Rule 46    expr -> expr GE expr  [precedence=nonassoc, level=3]
Rule 47    expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 48    expr -> expr LE expr  [precedence=nonassoc, level=3]
Rule 49    expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 50    expr -> expr NE expr  [precedence=nonassoc, level=3]
Rule 51    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 52    expr -> expr DOTDIV expr  [precedence=left, level=7]
Rule 53    expr -> expr DOTMUL expr  [precedence=left, level=7]
Rule 54    expr -> expr DOTSUB expr  [precedence=left, level=6]
Rule 55    expr -> expr DOTADD expr  [precedence=left, level=6]
Rule 56    expr -> expr DIVIDE expr  [precedence=left, level=5]
Rule 57    expr -> expr MUL expr  [precedence=left, level=5]
Rule 58    expr -> expr SUB expr  [precedence=left, level=4]
Rule 59    expr -> expr ADD expr  [precedence=left, level=4]
Rule 60    expr_list -> expr_list , expr
Rule 61    expr_list -> expr
Rule 62    matrix -> [ expr_list ]

Terminals, with rules where they appear:

'                    : 39
(                    : 18 19 20 36 37 38 45
)                    : 18 19 20 36 37 38 45
,                    : 60
:                    : 24
;                    : 6 14 15 16 17 26 27 28 29 30 31
=                    : 24 31
ADD                  : 59
ADDASSIGN            : 30
BREAK                : 17
CONTINUE             : 16
DIVASSIGN            : 27
DIVIDE               : 56
DOTADD               : 55
DOTDIV               : 52
DOTMUL               : 53
DOTSUB               : 54
ELSE                 : 19
EQ                   : 51
EYE                  : 38
FLOAT                : 41
FOR                  : 24
GE                   : 46
GT                   : 47
ID                   : 23 24 32 33 43 44
IF                   : 18 19
INTNUM               : 22 42
LE                   : 48
LT                   : 49
MUL                  : 57
MULASSIGN            : 28
NE                   : 50
ONES                 : 36
PRINT                : 26
RETURN               : 14 15
STRING               : 40
SUB                  : 35 58
SUBASSIGN            : 29
WHILE                : 20
ZEROS                : 37
[                    : 32 44 62
]                    : 32 44 62
error                : 
{                    : 25
}                    : 25

Nonterminals, with rules where they appear:

assignment           : 13
block_stmt           : 7
expr                 : 6 14 18 19 20 21 27 28 29 30 31 35 39 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61
expr_list            : 26 32 36 37 38 44 60 62
flow_stmt            : 9
for_interval         : 24 24
for_stmt             : 10
if_stmt              : 12
instruction          : 4 5 18 19 19 20 24
instructions         : 3 5 25
instructions_opt     : 1
lvalue               : 27 28 29 30 31
matrix               : 34
print_stmt           : 8
program              : 0
while_stmt           : 11


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . expr ;
    (7) instruction -> . block_stmt
    (8) instruction -> . print_stmt
    (9) instruction -> . flow_stmt
    (10) instruction -> . for_stmt
    (11) instruction -> . while_stmt
    (12) instruction -> . if_stmt
    (13) instruction -> . assignment
    (34) expr -> . matrix
    (35) expr -> . SUB expr
    (36) expr -> . ONES ( expr_list )
    (37) expr -> . ZEROS ( expr_list )
    (38) expr -> . EYE ( expr_list )
    (39) expr -> . expr '
    (40) expr -> . STRING
    (41) expr -> . FLOAT
    (42) expr -> . INTNUM
    (43) expr -> . ID
    (44) expr -> . ID [ expr_list ]
    (45) expr -> . ( expr )
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr DOTMUL expr
    (54) expr -> . expr DOTSUB expr
    (55) expr -> . expr DOTADD expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MUL expr
    (58) expr -> . expr SUB expr
    (59) expr -> . expr ADD expr
    (25) block_stmt -> . { instructions }
    (26) print_stmt -> . PRINT expr_list ;
    (14) flow_stmt -> . RETURN expr ;
    (15) flow_stmt -> . RETURN ;
    (16) flow_stmt -> . CONTINUE ;
    (17) flow_stmt -> . BREAK ;
    (24) for_stmt -> . FOR ID = for_interval : for_interval instruction
    (20) while_stmt -> . WHILE ( expr ) instruction
    (18) if_stmt -> . IF ( expr ) instruction
    (19) if_stmt -> . IF ( expr ) instruction ELSE instruction
    (27) assignment -> . lvalue DIVASSIGN expr ;
    (28) assignment -> . lvalue MULASSIGN expr ;
    (29) assignment -> . lvalue SUBASSIGN expr ;
    (30) assignment -> . lvalue ADDASSIGN expr ;
    (31) assignment -> . lvalue = expr ;
    (62) matrix -> . [ expr_list ]
    (32) lvalue -> . ID [ expr_list ]
    (33) lvalue -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    SUB             shift and go to state 14
    ONES            shift and go to state 15
    ZEROS           shift and go to state 17
    EYE             shift and go to state 18
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 22
    (               shift and go to state 16
    {               shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    CONTINUE        shift and go to state 27
    BREAK           shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    IF              shift and go to state 31
    [               shift and go to state 23

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expr                           shift and go to state 5
    block_stmt                     shift and go to state 6
    print_stmt                     shift and go to state 7
    flow_stmt                      shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    assignment                     shift and go to state 12
    matrix                         shift and go to state 13
    lvalue                         shift and go to state 32

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . expr ;
    (7) instruction -> . block_stmt
    (8) instruction -> . print_stmt
    (9) instruction -> . flow_stmt
    (10) instruction -> . for_stmt
    (11) instruction -> . while_stmt
    (12) instruction -> . if_stmt
    (13) instruction -> . assignment
    (34) expr -> . matrix
    (35) expr -> . SUB expr
    (36) expr -> . ONES ( expr_list )
    (37) expr -> . ZEROS ( expr_list )
    (38) expr -> . EYE ( expr_list )
    (39) expr -> . expr '
    (40) expr -> . STRING
    (41) expr -> . FLOAT
    (42) expr -> . INTNUM
    (43) expr -> . ID
    (44) expr -> . ID [ expr_list ]
    (45) expr -> . ( expr )
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr DOTMUL expr
    (54) expr -> . expr DOTSUB expr
    (55) expr -> . expr DOTADD expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MUL expr
    (58) expr -> . expr SUB expr
    (59) expr -> . expr ADD expr
    (25) block_stmt -> . { instructions }
    (26) print_stmt -> . PRINT expr_list ;
    (14) flow_stmt -> . RETURN expr ;
    (15) flow_stmt -> . RETURN ;
    (16) flow_stmt -> . CONTINUE ;
    (17) flow_stmt -> . BREAK ;
    (24) for_stmt -> . FOR ID = for_interval : for_interval instruction
    (20) while_stmt -> . WHILE ( expr ) instruction
    (18) if_stmt -> . IF ( expr ) instruction
    (19) if_stmt -> . IF ( expr ) instruction ELSE instruction
    (27) assignment -> . lvalue DIVASSIGN expr ;
    (28) assignment -> . lvalue MULASSIGN expr ;
    (29) assignment -> . lvalue SUBASSIGN expr ;
    (30) assignment -> . lvalue ADDASSIGN expr ;
    (31) assignment -> . lvalue = expr ;
    (62) matrix -> . [ expr_list ]
    (32) lvalue -> . ID [ expr_list ]
    (33) lvalue -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    SUB             shift and go to state 14
    ONES            shift and go to state 15
    ZEROS           shift and go to state 17
    EYE             shift and go to state 18
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 22
    (               shift and go to state 16
    {               shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    CONTINUE        shift and go to state 27
    BREAK           shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    IF              shift and go to state 31
    [               shift and go to state 23

    instruction                    shift and go to state 33
    expr                           shift and go to state 5
    block_stmt                     shift and go to state 6
    print_stmt                     shift and go to state 7
    flow_stmt                      shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    assignment                     shift and go to state 12
    matrix                         shift and go to state 13
    lvalue                         shift and go to state 32

state 4

    (4) instructions -> instruction .
    SUB             reduce using rule 4 (instructions -> instruction .)
    ONES            reduce using rule 4 (instructions -> instruction .)
    ZEROS           reduce using rule 4 (instructions -> instruction .)
    EYE             reduce using rule 4 (instructions -> instruction .)
    STRING          reduce using rule 4 (instructions -> instruction .)
    FLOAT           reduce using rule 4 (instructions -> instruction .)
    INTNUM          reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    (               reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    [               reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> expr . ;
    (39) expr -> expr . '
    (46) expr -> expr . GE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . LT expr
    (50) expr -> expr . NE expr
    (51) expr -> expr . EQ expr
    (52) expr -> expr . DOTDIV expr
    (53) expr -> expr . DOTMUL expr
    (54) expr -> expr . DOTSUB expr
    (55) expr -> expr . DOTADD expr
    (56) expr -> expr . DIVIDE expr
    (57) expr -> expr . MUL expr
    (58) expr -> expr . SUB expr
    (59) expr -> expr . ADD expr
    ;               shift and go to state 34
    '               shift and go to state 35
    GE              shift and go to state 36
    GT              shift and go to state 37
    LE              shift and go to state 38
    LT              shift and go to state 39
    NE              shift and go to state 40
    EQ              shift and go to state 41
    DOTDIV          shift and go to state 42
    DOTMUL          shift and go to state 43
    DOTSUB          shift and go to state 44
    DOTADD          shift and go to state 45
    DIVIDE          shift and go to state 46
    MUL             shift and go to state 47
    SUB             shift and go to state 48
    ADD             shift and go to state 49


state 6

    (7) instruction -> block_stmt .
    SUB             reduce using rule 7 (instruction -> block_stmt .)
    ONES            reduce using rule 7 (instruction -> block_stmt .)
    ZEROS           reduce using rule 7 (instruction -> block_stmt .)
    EYE             reduce using rule 7 (instruction -> block_stmt .)
    STRING          reduce using rule 7 (instruction -> block_stmt .)
    FLOAT           reduce using rule 7 (instruction -> block_stmt .)
    INTNUM          reduce using rule 7 (instruction -> block_stmt .)
    ID              reduce using rule 7 (instruction -> block_stmt .)
    (               reduce using rule 7 (instruction -> block_stmt .)
    {               reduce using rule 7 (instruction -> block_stmt .)
    PRINT           reduce using rule 7 (instruction -> block_stmt .)
    RETURN          reduce using rule 7 (instruction -> block_stmt .)
    CONTINUE        reduce using rule 7 (instruction -> block_stmt .)
    BREAK           reduce using rule 7 (instruction -> block_stmt .)
    FOR             reduce using rule 7 (instruction -> block_stmt .)
    WHILE           reduce using rule 7 (instruction -> block_stmt .)
    IF              reduce using rule 7 (instruction -> block_stmt .)
    [               reduce using rule 7 (instruction -> block_stmt .)
    $end            reduce using rule 7 (instruction -> block_stmt .)
    }               reduce using rule 7 (instruction -> block_stmt .)
    ELSE            reduce using rule 7 (instruction -> block_stmt .)


state 7

    (8) instruction -> print_stmt .
    SUB             reduce using rule 8 (instruction -> print_stmt .)
    ONES            reduce using rule 8 (instruction -> print_stmt .)
    ZEROS           reduce using rule 8 (instruction -> print_stmt .)
    EYE             reduce using rule 8 (instruction -> print_stmt .)
    STRING          reduce using rule 8 (instruction -> print_stmt .)
    FLOAT           reduce using rule 8 (instruction -> print_stmt .)
    INTNUM          reduce using rule 8 (instruction -> print_stmt .)
    ID              reduce using rule 8 (instruction -> print_stmt .)
    (               reduce using rule 8 (instruction -> print_stmt .)
    {               reduce using rule 8 (instruction -> print_stmt .)
    PRINT           reduce using rule 8 (instruction -> print_stmt .)
    RETURN          reduce using rule 8 (instruction -> print_stmt .)
    CONTINUE        reduce using rule 8 (instruction -> print_stmt .)
    BREAK           reduce using rule 8 (instruction -> print_stmt .)
    FOR             reduce using rule 8 (instruction -> print_stmt .)
    WHILE           reduce using rule 8 (instruction -> print_stmt .)
    IF              reduce using rule 8 (instruction -> print_stmt .)
    [               reduce using rule 8 (instruction -> print_stmt .)
    $end            reduce using rule 8 (instruction -> print_stmt .)
    }               reduce using rule 8 (instruction -> print_stmt .)
    ELSE            reduce using rule 8 (instruction -> print_stmt .)


state 8

    (9) instruction -> flow_stmt .
    SUB             reduce using rule 9 (instruction -> flow_stmt .)
    ONES            reduce using rule 9 (instruction -> flow_stmt .)
    ZEROS           reduce using rule 9 (instruction -> flow_stmt .)
    EYE             reduce using rule 9 (instruction -> flow_stmt .)
    STRING          reduce using rule 9 (instruction -> flow_stmt .)
    FLOAT           reduce using rule 9 (instruction -> flow_stmt .)
    INTNUM          reduce using rule 9 (instruction -> flow_stmt .)
    ID              reduce using rule 9 (instruction -> flow_stmt .)
    (               reduce using rule 9 (instruction -> flow_stmt .)
    {               reduce using rule 9 (instruction -> flow_stmt .)
    PRINT           reduce using rule 9 (instruction -> flow_stmt .)
    RETURN          reduce using rule 9 (instruction -> flow_stmt .)
    CONTINUE        reduce using rule 9 (instruction -> flow_stmt .)
    BREAK           reduce using rule 9 (instruction -> flow_stmt .)
    FOR             reduce using rule 9 (instruction -> flow_stmt .)
    WHILE           reduce using rule 9 (instruction -> flow_stmt .)
    IF              reduce using rule 9 (instruction -> flow_stmt .)
    [               reduce using rule 9 (instruction -> flow_stmt .)
    $end            reduce using rule 9 (instruction -> flow_stmt .)
    }               reduce using rule 9 (instruction -> flow_stmt .)
    ELSE            reduce using rule 9 (instruction -> flow_stmt .)


state 9

    (10) instruction -> for_stmt .
    SUB             reduce using rule 10 (instruction -> for_stmt .)
    ONES            reduce using rule 10 (instruction -> for_stmt .)
    ZEROS           reduce using rule 10 (instruction -> for_stmt .)
    EYE             reduce using rule 10 (instruction -> for_stmt .)
    STRING          reduce using rule 10 (instruction -> for_stmt .)
    FLOAT           reduce using rule 10 (instruction -> for_stmt .)
    INTNUM          reduce using rule 10 (instruction -> for_stmt .)
    ID              reduce using rule 10 (instruction -> for_stmt .)
    (               reduce using rule 10 (instruction -> for_stmt .)
    {               reduce using rule 10 (instruction -> for_stmt .)
    PRINT           reduce using rule 10 (instruction -> for_stmt .)
    RETURN          reduce using rule 10 (instruction -> for_stmt .)
    CONTINUE        reduce using rule 10 (instruction -> for_stmt .)
    BREAK           reduce using rule 10 (instruction -> for_stmt .)
    FOR             reduce using rule 10 (instruction -> for_stmt .)
    WHILE           reduce using rule 10 (instruction -> for_stmt .)
    IF              reduce using rule 10 (instruction -> for_stmt .)
    [               reduce using rule 10 (instruction -> for_stmt .)
    $end            reduce using rule 10 (instruction -> for_stmt .)
    }               reduce using rule 10 (instruction -> for_stmt .)
    ELSE            reduce using rule 10 (instruction -> for_stmt .)


state 10

    (11) instruction -> while_stmt .
    SUB             reduce using rule 11 (instruction -> while_stmt .)
    ONES            reduce using rule 11 (instruction -> while_stmt .)
    ZEROS           reduce using rule 11 (instruction -> while_stmt .)
    EYE             reduce using rule 11 (instruction -> while_stmt .)
    STRING          reduce using rule 11 (instruction -> while_stmt .)
    FLOAT           reduce using rule 11 (instruction -> while_stmt .)
    INTNUM          reduce using rule 11 (instruction -> while_stmt .)
    ID              reduce using rule 11 (instruction -> while_stmt .)
    (               reduce using rule 11 (instruction -> while_stmt .)
    {               reduce using rule 11 (instruction -> while_stmt .)
    PRINT           reduce using rule 11 (instruction -> while_stmt .)
    RETURN          reduce using rule 11 (instruction -> while_stmt .)
    CONTINUE        reduce using rule 11 (instruction -> while_stmt .)
    BREAK           reduce using rule 11 (instruction -> while_stmt .)
    FOR             reduce using rule 11 (instruction -> while_stmt .)
    WHILE           reduce using rule 11 (instruction -> while_stmt .)
    IF              reduce using rule 11 (instruction -> while_stmt .)
    [               reduce using rule 11 (instruction -> while_stmt .)
    $end            reduce using rule 11 (instruction -> while_stmt .)
    }               reduce using rule 11 (instruction -> while_stmt .)
    ELSE            reduce using rule 11 (instruction -> while_stmt .)


state 11

    (12) instruction -> if_stmt .
    SUB             reduce using rule 12 (instruction -> if_stmt .)
    ONES            reduce using rule 12 (instruction -> if_stmt .)
    ZEROS           reduce using rule 12 (instruction -> if_stmt .)
    EYE             reduce using rule 12 (instruction -> if_stmt .)
    STRING          reduce using rule 12 (instruction -> if_stmt .)
    FLOAT           reduce using rule 12 (instruction -> if_stmt .)
    INTNUM          reduce using rule 12 (instruction -> if_stmt .)
    ID              reduce using rule 12 (instruction -> if_stmt .)
    (               reduce using rule 12 (instruction -> if_stmt .)
    {               reduce using rule 12 (instruction -> if_stmt .)
    PRINT           reduce using rule 12 (instruction -> if_stmt .)
    RETURN          reduce using rule 12 (instruction -> if_stmt .)
    CONTINUE        reduce using rule 12 (instruction -> if_stmt .)
    BREAK           reduce using rule 12 (instruction -> if_stmt .)
    FOR             reduce using rule 12 (instruction -> if_stmt .)
    WHILE           reduce using rule 12 (instruction -> if_stmt .)
    IF              reduce using rule 12 (instruction -> if_stmt .)
    [               reduce using rule 12 (instruction -> if_stmt .)
    $end            reduce using rule 12 (instruction -> if_stmt .)
    }               reduce using rule 12 (instruction -> if_stmt .)
    ELSE            reduce using rule 12 (instruction -> if_stmt .)


state 12

    (13) instruction -> assignment .
    SUB             reduce using rule 13 (instruction -> assignment .)
    ONES            reduce using rule 13 (instruction -> assignment .)
    ZEROS           reduce using rule 13 (instruction -> assignment .)
    EYE             reduce using rule 13 (instruction -> assignment .)
    STRING          reduce using rule 13 (instruction -> assignment .)
    FLOAT           reduce using rule 13 (instruction -> assignment .)
    INTNUM          reduce using rule 13 (instruction -> assignment .)
    ID              reduce using rule 13 (instruction -> assignment .)
    (               reduce using rule 13 (instruction -> assignment .)
    {               reduce using rule 13 (instruction -> assignment .)
    PRINT           reduce using rule 13 (instruction -> assignment .)
    RETURN          reduce using rule 13 (instruction -> assignment .)
    CONTINUE        reduce using rule 13 (instruction -> assignment .)
    BREAK           reduce using rule 13 (instruction -> assignment .)
    FOR             reduce using rule 13 (instruction -> assignment .)
    WHILE           reduce using rule 13 (instruction -> assignment .)
    IF              reduce using rule 13 (instruction -> assignment .)
    [               reduce using rule 13 (instruction -> assignment .)
    $end            reduce using rule 13 (instruction -> assignment .)
    }               reduce using rule 13 (instruction -> assignment .)
    ELSE            reduce using rule 13 (instruction -> assignment .)


state 13

    (34) expr -> matrix .
    ;               reduce using rule 34 (expr -> matrix .)
    '               reduce using rule 34 (expr -> matrix .)
    GE              reduce using rule 34 (expr -> matrix .)
    GT              reduce using rule 34 (expr -> matrix .)
    LE              reduce using rule 34 (expr -> matrix .)
    LT              reduce using rule 34 (expr -> matrix .)
    NE              reduce using rule 34 (expr -> matrix .)
    EQ              reduce using rule 34 (expr -> matrix .)
    DOTDIV          reduce using rule 34 (expr -> matrix .)
    DOTMUL          reduce using rule 34 (expr -> matrix .)
    DOTSUB          reduce using rule 34 (expr -> matrix .)
    DOTADD          reduce using rule 34 (expr -> matrix .)
    DIVIDE          reduce using rule 34 (expr -> matrix .)
    MUL             reduce using rule 34 (expr -> matrix .)
    SUB             reduce using rule 34 (expr -> matrix .)
    ADD             reduce using rule 34 (expr -> matrix .)
    )               reduce using rule 34 (expr -> matrix .)
    ]               reduce using rule 34 (expr -> matrix .)
    ,               reduce using rule 34 (expr -> matrix .)
    :               reduce using rule 34 (expr -> matrix .)
    ONES            reduce using rule 34 (expr -> matrix .)
    ZEROS           reduce using rule 34 (expr -> matrix .)
    EYE             reduce using rule 34 (expr -> matrix .)
    STRING          reduce using rule 34 (expr -> matrix .)
    FLOAT           reduce using rule 34 (expr -> matrix .)
    INTNUM          reduce using rule 34 (expr -> matrix .)
    ID              reduce using rule 34 (expr -> matrix .)
    (               reduce using rule 34 (expr -> matrix .)
    {               reduce using rule 34 (expr -> matrix .)
    PRINT           reduce using rule 34 (expr -> matrix .)
    RETURN          reduce using rule 34 (expr -> matrix .)
    CONTINUE        reduce using rule 34 (expr -> matrix .)
    BREAK           reduce using rule 34 (expr -> matrix .)
    FOR             reduce using rule 34 (expr -> matrix .)
    WHILE           reduce using rule 34 (expr -> matrix .)
    IF              reduce using rule 34 (expr -> matrix .)
    [               reduce using rule 34 (expr -> matrix .)


state 14

    (35) expr -> SUB . expr
    (34) expr -> . matrix
    (35) expr -> . SUB expr
    (36) expr -> . ONES ( expr_list )
    (37) expr -> . ZEROS ( expr_list )
    (38) expr -> . EYE ( expr_list )
    (39) expr -> . expr '
    (40) expr -> . STRING
    (41) expr -> . FLOAT
    (42) expr -> . INTNUM
    (43) expr -> . ID
    (44) expr -> . ID [ expr_list ]
    (45) expr -> . ( expr )
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr DOTMUL expr
    (54) expr -> . expr DOTSUB expr
    (55) expr -> . expr DOTADD expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MUL expr
    (58) expr -> . expr SUB expr
    (59) expr -> . expr ADD expr
    (62) matrix -> . [ expr_list ]
    SUB             shift and go to state 14
    ONES            shift and go to state 15
    ZEROS           shift and go to state 17
    EYE             shift and go to state 18
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 51
    (               shift and go to state 16
    [               shift and go to state 23

    expr                           shift and go to state 50
    matrix                         shift and go to state 13

state 15

    (36) expr -> ONES . ( expr_list )
    (               shift and go to state 52


state 16

    (45) expr -> ( . expr )
    (34) expr -> . matrix
    (35) expr -> . SUB expr
    (36) expr -> . ONES ( expr_list )
    (37) expr -> . ZEROS ( expr_list )
    (38) expr -> . EYE ( expr_list )
    (39) expr -> . expr '
    (40) expr -> . STRING
    (41) expr -> . FLOAT
    (42) expr -> . INTNUM
    (43) expr -> . ID
    (44) expr -> . ID [ expr_list ]
    (45) expr -> . ( expr )
    (46) expr -> . expr GE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr DOTDIV expr
    (53) expr -> . expr DOTMUL expr
    (54) expr -> . expr DOTSUB expr
    (55) expr -> . expr DOTADD expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MUL expr
    (58) expr -> . expr SUB expr
    (59) expr -> . expr ADD expr
    (62) matrix -> . [ expr_list ]
    SUB             shift and go to state 14
    ONES            shift and go to state 15
    ZEROS           shift and go to state 17
    EYE             shift and go to state 18
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 51
    (               shift and go to state 16
    [               shift and go to state 23

    expr                           shift and go to state 53
    matrix                         shift and go to state 13

state 17

    (37) expr -> ZEROS . ( expr_list )
    (               shift and go to state 54


state 18

    (38) expr -> EYE . ( expr_list )
    (               shift and go to state 55


state 19

    (40) expr -> STRING .
    ;               reduce using rule 40 (expr -> STRING .)
    '               reduce using rule 40 (expr -> STRING .)
    GE              reduce using rule 40 (expr -> STRING .)
    GT              reduce using rule 40 (expr -> STRING .)
    LE              reduce using rule 40 (expr -> STRING .)
    LT              reduce using rule 40 (expr -> STRING .)
    NE              reduce using rule 40 (expr -> STRING .)
    EQ              reduce using rule 40 (expr -> STRING .)
    DOTDIV          reduce using rule 40 (expr -> STRING .)
    DOTMUL          reduce using rule 40 (expr -> STRING .)
    DOTSUB          reduce using rule 40 (expr -> STRING .)
    DOTADD          reduce using rule 40 (expr -> STRING .)
    DIVIDE          reduce using rule 40 (expr -> STRING .)
    MUL             reduce using rule 40 (expr -> STRING .)
    SUB             reduce using rule 40 (expr -> STRING .)
    ADD             reduce using rule 40 (expr -> STRING .)
    )               reduce using rule 40 (expr -> STRING .)
    ]               reduce using rule 40 (expr -> STRING .)
    ,               reduce using rule 40 (expr -> STRING .)
    :               reduce using rule 40 (expr -> STRING .)
    ONES            reduce using rule 40 (expr -> STRING .)
    ZEROS           reduce using rule 40 (expr -> STRING .)
    EYE             reduce using rule 40 (expr -> STRING .)
    STRING          reduce using rule 40 (expr -> STRING .)
    FLOAT           reduce using rule 40 (expr -> STRING .)
    INTNUM          reduce using rule 40 (expr -> STRING .)
    ID              reduce using rule 40 (expr -> STRING .)
    (               reduce using rule 40 (expr -> STRING .)
    {               reduce using rule 40 (expr -> STRING .)
    PRINT           reduce using rule 40 (expr -> STRING .)
    RETURN          reduce using rule 40 (expr -> STRING .)
    CONTINUE        reduce using rule 40 (expr -> STRING .)
    BREAK           reduce using rule 40 (expr -> STRING .)
    FOR             reduce using rule 40 (expr -> STRING .)
    WHILE           reduce using rule 40 (expr -> STRING .)
    IF              reduce using rule 40 (expr -> STRING .)
    [               reduce using rule 40 (expr -> STRING .)


state 20
